# oriac

./: Cargo.toml  README.md
.github/workflows/: lint.yaml
benches/: run_past_end.rs
examples/cairo-wasm/: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json
examples/cairo-wasm/src/: lib.rs
src/: debug_info.rs  flow.rs  lib.rs  preprocessor.rs  program.rs
src/cairo/: mod.rs
src/cairo/lang/: instances.rs  mod.rs
src/cairo/lang/builtins/: mod.rs
src/cairo/lang/builtins/hash/: instance_def.rs
src/cairo/lang/builtins/range_check/: instance_def.rs
src/cairo/lang/builtins/signature/: instance_def.rs  mod.rs
src/cairo/lang/compiler/: debug_info.rs  encode.rs  identifier_definition.rs  identifier_manager.rs  instruction.rs  mod.rs  program.rs  references.rs  scoped_name.rs
src/cairo/lang/compiler/preprocessor/: flow.rs  mod.rs  preprocessor.rs
src/cairo/lang/vm/: builtin_runner.rs  cairo_runner.rs  memory_dict.rs  memory_segments.rs  mod.rs  output_builtin_runner.rs  relocatable.rs  trace_entry.rs  utils.rs  validated_memory_dict.rs  virtual_machine_base.rs  vm_core.rs  vm_exceptions.rs
src/cli/run/: main.rs
src/hint_support/: mod.rs
src/serde/: big_int.rs  mod.rs
test-data/: docker_entry.sh  generate_artifacts.sh
test-data/artifacts/: bad_stop_ptr.json  run_past_end.json
test-data/contracts/: bad_stop_ptr.cairo  run_past_end.cairo
