[package]
name = "oriac"
version = "0.0.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
description = """
A toy Cairo VM implementation in Rust
"""

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
hex = "0.4.3"
num-bigint = "0.4.3"
rustpython = { git = "https://github.com/RustPython/RustPython" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_with = "1.11.0"
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "run_past_end"
harness = false

[[bin]]
name = "oriac-run"
path = "src/cli/run/main.rs"
doc = false
